kubernetes/overlays/prod/patch-planning.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planning-service
spec:
  template:
    spec:
      containers:
        - name: planning-service
          readinessProbe:
            httpGet:
              path: /planning/api/plans/health
