kubernetes/overlays/prod/patch-social.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: social-service
spec:
  template:
    spec:
      containers:
        - name: social-service
          readinessProbe:
            httpGet:
              path: /social/api/plans/health
